# ToDoList

./: Dockerfile  Dockerfile.tasks  Dockerfile.web_app  README.md  docker-compose.yml  pyproject.toml  web_app.py
database_service/models/: __all_models.py  config.py  db_session.py  tasks.py  users.py  users_tasks.py
task_service/: Dockerfile.tasks  task_service.py
templates/: index.html
web_app/: Dockerfile.web_app
web_app/templates/: index.html
