[tool.poetry]
name = "todolist"
version = "0.1.0"
description = ""
authors = ["DmitriyKruchkov <kruchkovdmitriy48@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.110.1"
uvicorn = "^0.29.0"
pydantic = "^2.6.4"
aiosqlite = "^0.20.0"
SQLAlchemy = "^2.0.29"
jinja2 = "^3.1.3"
httpx = "^0.27.0"
requests = "^2.31.0"
werkzeug = "^3.0.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
